tdf#123031 allow natural cell width if the combobox contents are >= request

which matters in at least gtk 3.19

Change-Id: I760e46d02f2678842a685aa077bd0129520a3263